<resources>
    <string name="app_name">AppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="appPortfolioTitle">My Nanodegree Apps!</string>

    --Buttons
    <string name="spotifyStreamer">Spotify Streamer</string>
    <string name="scoresApp">Scores App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildItBigger">Build It Bigger</string>
    <string name="xyzReader">XYZ Reader</string>
    <string name="capstoneApp">Capstone: My Own App</string>

    --Toast Messages
    <string name="spotifyStreamerMessage">This will launch my spotify streamer app</string>
    <string name="scoresAppMessage">This will launch my scores app</string>
    <string name="libraryAppMessage">This will launch my library app</string>
    <string name="buildItBiggerMessage">This will launch my build it bigger app</string>
    <string name="xyzReaderMessage">This will launch my xyz reader app</string>
    <string name="capstoneAppMessage">This will launch my capstone app</string>


</resources>
