<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.brian.appportfolio.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/mainTitle"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:text="@string/appPortfolioTitle"
        android:layout_marginBottom="20dp"
         />
    
    <Button
        android:id="@+id/spotifyStreamer"
        android:text="@string/spotifyStreamer"
        style="@style/AppLaunchingButtons"/>

    <Button
        android:id="@+id/scoresApp"
        android:text="@string/scoresApp"
        style="@style/AppLaunchingButtons"/>

    <Button
        android:id="@+id/libraryApp"
        android:text="@string/libraryApp"
        style="@style/AppLaunchingButtons"/>

    <Button
        android:id="@+id/buildItBigger"
        android:text="@string/buildItBigger"
        style="@style/AppLaunchingButtons"/>

    <Button
        android:id="@+id/xyzReader"
        android:text="@string/xyzReader"
        style="@style/AppLaunchingButtons"/>

    <Button
        android:id="@+id/capstoneApp"
        android:text="@string/capstoneApp"
        android:background="#8bc34a"
        style="@style/AppLaunchingButtons"/>

</LinearLayout>